# specialist-prediction

./: pyproject.toml
data/: filtered_predictions.csv  filtered_predictions_v2.csv  filtered_predictions_v3.csv  filtered_predictions_v4.csv
notebooks/: 001-data-processing-v2.ipynb  001-data-processing.ipynb  002-feature-engineering.ipynb  003-model-training-v2.ipynb  003-model-training.ipynb  004-inference.ipynb  005-training-bert-classifer.ipynb  006-error-analysis.ipynb  007-synthetic-data-generation.ipynb  008-hybid-modeling.ipynb  009-crawling.ipynb  age_encoder.pkl  specialist_encoder.pkl  test.ipynb
notebooks/.ipynb_checkpoints/: 001-data-processing-checkpoint.ipynb  002-feature-engineering-checkpoint.ipynb  003-model-training-checkpoint.ipynb  003-model-training-v2-checkpoint.ipynb  004-inference-checkpoint.ipynb  005-training-bert-classifer-checkpoint.ipynb  006-error-analysis-checkpoint.ipynb  007-synthetic-data-generation-checkpoint.ipynb  008-hybid-modeling-checkpoint.ipynb  009-crawling-checkpoint.ipynb  scrape_result-checkpoint.json  test-checkpoint.ipynb
scripts/: data_processing.py  hf_model_download.py  hf_model_upload.py
src/: data_prep_utils.py
src/features/: __init__.py  embeddings.py  schedules.py
src/features/.ipynb_checkpoints/: embeddings-checkpoint.py
src/model/: __init__.py  data.py  model.py  train.py  utils.py
src/specialist_prediction/: __init__.py
tests/: load_features.py
