[project]
name = "specialist-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nam pham", email = "contact.nampham.work@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.2.1",
    "dill>=0.3.9",
    "ipywidgets>=8.1.5",
    "pandas>=2.2.3",
    "semhash>=0.2.1",
]

[dependency-groups]
development = [
    "jupyterlab>=4.3.6",
    "mlflow>=2.21.2",
    "model2vec[distill,training]>=0.4.1",
    "notebook-intelligence>=1.3.0",
    "optuna>=4.2.1",
    "seaborn>=0.13.2",
]
ml = [
    "scikit-learn>=1.6.1",
    "underthesea>=6.8.4",
    "xgboost>=3.0.0",
]
